# nix-builtin-utils

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  default.nix  flake.nix  meson.build
.github/workflows/: ci.yaml
src/: lib.rs  list.c  meson.build  nix-builtin-utils-2.h  nix-builtin-utils.h  regex.cxx  tests.cxx  tests.rs
